@@ -1,0 +1,15 @@
+AUX 4.0.4/conf.d/jboss-4 2937 RMD160 28208f4d98ad87026b2020b6e7b2a613eb6fc336 SHA1 7577fd54610fc8818492fa2754cca40bd0073a7c SHA256 dcf2e7e2edacfefd3e74cbe2d3aab135b8bf54d649d9f0f02e8f8757a004405a
+AUX 4.0.4/conf.d/jboss-4-r1 3097 RMD160 75c1ade1d0a153dc6acfe4b69fdeebcfa2f4227d SHA1 850d554360b592bdeeac2f367e3958aacdbbea0e SHA256 e27661c63c288d4402a39dda7ca9e46c882049e520741514efd7f0de8b2df918
+AUX 4.0.4/env.d/50jboss-4 109 RMD160 ff036e95a97f927198727dea8b28bb51b848de5d SHA1 4895db88d9e6186995baba0e9102ba13f3abbb3d SHA256 8fa1e445816dc9fd0e0e9ab31fe98536a94f066b1ac0e7481cd9b48fe7118f02
+AUX 4.0.4/init.d/jboss-4 860 RMD160 e38ad6b9023a20431a2b3bbec2c1ff3e0230367f SHA1 1bd5dead00420a43881cdc6b51389217dc6b37ce SHA256 7c51e2ce63d2ba96f52a396b76a1c8580fc2efa799c4bebe1dd7e1c9986bc68e
+AUX 4.0.4/log4j.xml 5825 RMD160 3d23ad11909fa8ea846f440a75a7586304d8a03b SHA1 3b96ca4d4b9cabbe2dc08dee35d2c31d81c1e493 SHA256 967e1e6abde37ca24d8602da9a43d6be5760f6e07cb377f11cb33b6569e4baf8
+AUX 4.0.5/thirdparties/wsdl4j/build.xml 7172 RMD160 a6bf94124abdb2c2385c0018a4dae4c7f90b28d4 SHA1 594af460f36e89daecff356cdb1579f809bab5d0 SHA256 5074c6a037109d71859d9cc0cd3940688ce8195893617095948ed16ed76be3ab
+AUX 4.0.5/thirdparties/wsdl4j/jboss_wsdl4j.patch 1410 RMD160 4a7f810e2bda34bcb4d9c8f543c4d3830681b07f SHA1 cb00b19d69380503ad26d57321ae3344b2ef3b38 SHA256 f10ec84b11bdd49536923e0b269a89ce2711b651dcc5181242ea5147b32c35dc
+DIST jboss-4.0.4.GA.zip 77400244 RMD160 6f8a26edf165cefd1c3d84311ca3be5fb09a6a75 SHA1 27698ca69c8c3b30470cb5397ba4728808481197 SHA256 e9939837d98c30b283f5ef655f611b4f00a2a2a607e1f7ce823479fe94403d72
+DIST jboss-4.0.5.GA.zip 80866589 RMD160 9349152c4749f696edc49e14665301667aba4cfb SHA1 496a49547e3525c7f32b169126cdff13c2d8a04a SHA256 b81b7bba2657c4e1cb7cf7e3958eaffbe48ee0c5ebbe5782909745277a3b923f
+EBUILD jboss-4.0.4-r1.ebuild 3531 RMD160 62dd6ced173773c3dd0288def61cda30edf08ce0 SHA1 34f186fa7eb6431479fc59734b07c42dd3515ddf SHA256 ae2c2491cec51706e7ac57eeb956163e4930b1307d267408f25e63df049eb94e
+EBUILD jboss-4.0.4.ebuild 2347 RMD160 ee7147b5f6e60ac6d38353b3d479e813bce3f3a1 SHA1 9768a255b608e9d3f9e8edc6e13417e548c41ace SHA256 ab53a2cd241b0c511ee96301b7590e55ddb2cfef534de5a9d5f118b00a5c4d35
+EBUILD jboss-4.0.5-r1.ebuild 2626 RMD160 4e079fd467bd0c11464d57ab461f657fe05d536e SHA1 124677a7bd8c7836e926ca7e196e032377a36311 SHA256 2c7938f1f049c701e1d2990ee934ca28562fa7a86259f43b20fdf6c687eb4140
+EBUILD jboss-4.0.5.ebuild 4668 RMD160 ca9bc6fe58b75da6b283a0804aedd6e47250ca7e SHA1 17a4d3928fc71eab62dafa3bb8eb5c3261af1449 SHA256 1a85e6b03a8daf2380de91d0c954debadeff9e831d99eb6613026ddf8546e27f
+MISC ChangeLog 566 RMD160 4891dcf6eabf95ab68bdbc973becb86f87a31314 SHA1 533e2f07c2d7e1f67b260349fa8fceb31053f5b2 SHA256 260dd1934c3783c2a7f05a5a14fdc3f88affdfbcda423d7564cd70990bf0933b
+MISC metadata.xml 205 RMD160 934c811ce2118963118b8ad86da1ec2814dd285f SHA1 f75079bfb666a750926732a1606474fee17093df SHA256 e319f1701f6be29c8e077049d77738b69b72be0458754ef90ad9a684f2ec1722
